# budgeters-server

./: Cargo.toml  start.sh
postgres/: structure.sql
postgres/auth/: check_permissions.sql  register_user.sql
postgres/session/: insert_session.sql  read_permissions.sql  read_session.sql  remove_session.sql  update_session.sql
src/: database.rs  main.rs
src/auth/: credentials.rs  guards.rs  mod.rs  service.rs
src/session/: .mod.rs.rustfmt  management.rs  mod.rs
