[package]
name = "budgeters-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["json", "headers"] }
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
cookie = "0.16.0"

serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

async-trait = "0.1.57"
base64 = "0.13.0"
rand = "0.8.5"

sqlx = { version = "0.6.1", features = [
  "chrono",
  "uuid",
  "postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = "0.4.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"

argon2 = { version = "0.4.1", features = ["alloc"] }

tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = [
  "env-filter",
  "std",
  "fmt",
] }
